kustomize/security/tls/gateway-api/longhorn-route.yml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: eg-tls # gateway name
      sectionName: envoyhttps
      namespace: default
  hostnames:
    - "longhorn.int.honker.dev"
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
